# template-cpp

./: .clang-format  .devcontainer.json  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
docs/: Doxyfile
include/hc/project/: hello.h
include/project/: project.h
src/: CMakeLists.txt  project.cpp
src/hc/project/: CMakeLists.txt  hello.cpp
test/package/: CMakeLists.txt  conanfile.py  example.cpp
test/unit/: CMakeLists.txt  TestProject.cpp
